--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-/code/cardinal
-/code/cardinal.js
-/code/constitution
-/code/scripts/bundles
-/temp
-/builds
-/node_modules
+node_modules
 /.idea
-seed
 bundles
 package-lock.json
 .eslintrc.json
-DateTimeService.js
-DSUService.js
-Constants.js
-FileDownloader.js
-SharedStorage.js
-ionic-core
-api.js
 .eslintrc.js
